<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
	
	<TableRow>

        <TextView
            android:layout_column="1"
            android:padding="3dip"
            android:text="@string/usegps" />

        <Spinner
            android:id="@+id/GPSSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/GpsYesNo" />

    </TableRow>
	<TableRow>
	    <TextView 
	        android:layout_column="1"
	        android:padding="3dip"
	        android:text="@string/radius" />
	    <Spinner android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/SearchRadiusArray" />"
	</TableRow>
	<Button
	    android:id="@+id/SaveChangesButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:onClick="SaveChangesButtonOnClick"
	    android:text="@string/savechanges" />
    
</TableLayout>